--- a/samples/GoogleClientSample/GoogleClientSample/Platforms/iOS/Info.plist
+++ b/samples/GoogleClientSample/GoogleClientSample/Platforms/iOS/Info.plist
@@ -28,5 +28,20 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>Google Services</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.395474306988-0sjul8uqvkg2k1m2ntirj6r1fsi2v9nq</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+		</dict>
+	</array>
 </dict>
 </plist>
