updated to .net9

--- a/src/GoogleClient.MAUI/Plugin.GoogleClient.MAUI/Plugin.GoogleClient.MAUI.csproj
+++ b/src/GoogleClient.MAUI/Plugin.GoogleClient.MAUI/Plugin.GoogleClient.MAUI.csproj
@@ -15,22 +15,21 @@
 		<IncludeSymbols>True</IncludeSymbols>
 	</PropertyGroup>
   <PropertyGroup>
-	  <TargetFrameworks>net8.0-android;net8.0-ios</TargetFrameworks>
+	  <TargetFrameworks>net9.0-android;net9.0-ios</TargetFrameworks>
 	  <UseMaui>true</UseMaui>
 	  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
 	  <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-ios'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0-ios'">
     <PackageReference Include="Xamarin.Google.iOS.SignIn" Version="5.0.2.4" />
 	<PackageReference Include="Xamarin.Firebase.iOS.Core" Version="8.10.0.3" />
 	<PackageReference Include="Xamarin.Build.Download" Version="0.11.4" />
-	<PackageReference Include="Xamarin.Firebase.iOS.Core" Version="8.10.0.3" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
-	<PackageReference Include="Xamarin.AndroidX.Activity" Version="1.8.1.1" />
-	<PackageReference Include="Xamarin.AndroidX.Activity.Ktx" Version="1.8.1.1" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0-android'">
+	<PackageReference Include="Xamarin.AndroidX.Activity" Version="1.10.1" />
+	<PackageReference Include="Xamarin.AndroidX.Activity.Ktx" Version="1.10.1" />
 	  
 	<PackageReference Include="Xamarin.GooglePlayServices.Basement">
 		<Version>118.2.0.4</Version>
@@ -47,8 +46,8 @@
   </ItemGroup>
 		
   <ItemGroup>
-	  <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.40" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.40" />
   </ItemGroup>
 
 </Project>
